# tcfuse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  pixi.toml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-jz.txt  requirements.txt
.agents/: architecture.md  cleps.md  coding-style.md  context.md  evaluate.md  inference.md  jz.md  motif.md  preprocess.md  pyright-fixer.md  python-typing.md  sweep.md  visualize.md
.agents/predictions/: reference.md  skill.md
.basedpyright/: baseline.json
.claude/: settings.json
.claude/commands/: architecture.md  cleps.md  evaluate.md  inference.md  jz.md  motif.md  predictions.md  preprocess.md  sweep.md  visualize.md
.cursor/: worktrees.json
.cursor/rules/: python-pyright.mdc  tcfuse-coding-style.mdc  tcfuse-core.mdc  tcfuse-jz.mdc  tcfuse-preprocess.mdc  tcfuse-visualization.mdc
.github/workflows/: type-check.yml
conf/: evaluation.yaml  inference.yaml  preproc.yaml  profile_data.yaml  train.yaml
conf/comparison/: debug.yaml
conf/data/: default.yaml
conf/dataloader/: default.yaml
conf/datamodule/: default.yaml
conf/evaluation/: quantitative_metrics.yaml  visual.yaml
conf/experiment/: pmw_gmi.yaml  pmw_gmi_5min.yaml  pmw_gmi_cross_transformer.yaml  pmw_gmi_reconstruction_dummy.yaml  pmw_gmi_sweep.yaml
conf/lightning_module/: ibtracs_forecast.yaml  masked_reconstruction.yaml
conf/logger/: wandb.yaml
conf/lr_scheduler/: default.yaml
conf/model/: channelwise_affine.yaml  cross_transformer.yaml  patch_embed_encoder.yaml  patch_unembed_decoder.yaml  perceiver.yaml  transformer.yaml
conf/optimizer/: default.yaml
conf/paths/: cleps.yaml  jz.yaml  local.yaml
conf/setup/: cleps_arches.yaml  cleps_arches_x4.yaml  cleps_cpu.yaml  cleps_gpu_arches.yaml  cleps_gpu_rtx8000.yaml  cleps_rtx8000.yaml  cleps_rtx8000_x3.yaml  jz_4xh100.yaml  jz_4xv100.yaml  jz_4xv100_32g.yaml  jz_archive.yaml  jz_cpu.yaml  jz_gpu_a100.yaml  jz_gpu_h100.yaml  jz_gpu_v100.yaml  jz_h100.yaml  jz_prepost.yaml  jz_v100.yaml  local.yaml
conf/trainer/: default.yaml
conf/windows_setup/: ibtracs_forecast_24h.yaml  pmw_gmi_reconstruction.yaml  pmw_gmi_reconstruction_5min.yaml
scripts/: export_jz_requirements.py  setup_cleps.sh  setup_jz.sh
scripts/evaluation/: evaluate.py
scripts/inference/: infer.py
scripts/preprocess/: assemble.py  build_splits.py  build_windows.py  compute_normalization.py  prepare_ibtracs.py  (+1 more)
tests/: test_assemble.py  test_build_splits.py  test_build_windows.py  test_compute_normalization.py  test_cross_source_attention_motif.py  test_cross_transformer.py  test_datamodule.py  test_dataset.py  test_decoders.py  test_decoders_motif.py  test_download_sar_cyclobs.py  test_embeddings.py  test_embeddings_motif.py  test_io.py  test_lightning_ibtracs_forecast.py  test_metadata.py  test_model.py  test_perceiver.py  test_predictions.py  test_prepare_ibtracs.py  test_prepare_infrared.py  test_prepare_sar.py  test_preprocess_field_grid.py  test_regridding.py  test_sources.py  test_sources_radar.py  test_storm_data.py  test_time_utils.py  test_transformer.py  test_visualization_data_profile.py  test_visualization_fields.py  test_visualization_storm_data_visu.py  test_visualization_timeline.py  test_visualization_training.py
(+134 files in other folders)
