[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcfuse"
version = "0.1.0"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/tcfuse", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"scripts/**" = ["ANN", "D"]
"notebooks/**" = ["ANN", "D", "E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "scripts"]
exclude = ["notebooks", "figures", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
