[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcfuse"
version = "0.1.0"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/tcfuse", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
    "N806", # uppercase dimension variables (B, H, W, C, L) are conventional in ML code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "N803"]  # N803: uppercase dimension args (B, H, W, C, L) in test helpers
"scripts/**" = ["ANN", "D"]
"notebooks/**" = ["ANN", "D", "E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
include = ["src", "scripts", "tests"]
exclude = ["notebooks", "figures", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
extraPaths = ["src"]
baselineFile = ".basedpyright/baseline.json"

# Keep unknown-type reports quiet while scientific Python stubs remain noisy.
# Tighten these one by one once pandas/numpy/torch call sites are typed locally.
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportPrivateImportUsage = "none"
